Update footer styling in dashboard and index templates

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -232,7 +232,7 @@
     </main>
     <!-- Footer -->
     <footer
-      class="text-center text-white fixed-bottom"
+      class="jumbotron text-center text-white fixed-bottom"
       style="background-color: #030303;
       position: sticky;"
     >
