--- a/templates/index.html
+++ b/templates/index.html
@@ -231,7 +231,7 @@
 
     <!-- Footer -->
     <footer
-      class="text-center text-white fixed-bottom"
+      class="jumbotron text-center text-white fixed-bottom"
       style="background-color: #030303"
     >
       <!-- Copyright -->
