--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,54 @@
     </main>
 
 
+    
+    <!-- Share Icon -->
+    <div class="floating-container">
+      <div class="floating-button">
+          <i class="fa-solid fa-share-from-square"></i>
+      </div>
+      <!-- Elements -->
+      <div class="element-container">
+          <!-- Facebook -->
+          <a class="float-element" href="https://www.facebook.com/sharer/sharer.php?u=https%3A//sanjeev02.pythonanywhere.com/" target="_blank"> 
+              <span>
+              <i class="fa-brands fa-facebook"></i>
+          </a>
+
+          <!-- WhatsApp -->
+          </span>
+          <a class="float-element" href="https://api.whatsapp.com/send?text=Check%20out%20this%20page:%20https://sanjeev02.pythonanywhere.com" target="_blank">
+          <span>
+              <i class="fa-brands fa-whatsapp"></i>
+          </span>
+          </a>
+
+          <!-- Twitter or X -->
+          <a class="float-element" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page:%20https://sanjeev02.pythonanywhere.com" target="_blank">
+          <span>
+              <i class="fa-brands fa-x-twitter"></i>
+          </span>
+          </a>
+
+          <!-- LinkedIn -->
+          <a class="float-element" href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//sanjeev02.pythonanywhere.com" target="_blank">
+          <span >
+              <i class="fa-brands fa-linkedin"></i>
+          </span>
+          </a>
+
+          <!-- Telegram -->
+          <a class="float-element" href="https://t.me/share?url=https%3A%2F%2Fsanjeev02.pythonanywhere.com%2F&text=Check%20this%20out" target="_blank">
+          <span >
+              <i class="fa-brands fa-telegram"></i>
+          </span>
+          </a>
+          
+      </div>
+  </div>
+
     <!-- Footer -->
+
     <footer
       class="jumbotron text-center text-white fixed-bottom"
       style="background-color: #030303"
