--- a/templates/headers.html
+++ b/templates/headers.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Itinerary</title>
 
+    <!-- Share Button css -->
+    <link
+      rel="stylesheet" type="text/css"
+      href="{{ url_for('static', filename='share.css' ) }}"
+    />
+    <script
+      src="https://kit.fontawesome.com/046a1f51ad.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- This code block includes links to Bootstrap CSS and Bootstrap Icons CSS. -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,6 +21,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
@@ -53,7 +63,7 @@
       .nav-item {
         width: max-content;
       }
-      
+
       @media (max-width: 768px) {
         header {
           font-size: 1rem;
@@ -72,7 +82,6 @@
           width: auto;
         }
       }
-
     </style>
   </head>
   <body>
@@ -175,4 +184,4 @@
 
     {% block content %}{% endblock %}
   </body>
-  </html>
+</html>
