--- a/templates/index.html
+++ b/templates/index.html
@@ -115,12 +115,9 @@
         class="text-center p-3"
         style="background-color: rgba(255, 255, 255, 0)"
       >
-        <p>&copy {{now.year}} Copyright</p>
         <p>
           Made With 🩷 By
-          <a style="color: #0ed9ddd6; text-decoration: none" href="#"
-            >Sanjeev</a
-          >
+          <a style="color: #0ed9ddd6; text-decoration: none" href="#"> pradeep</a>
         </p>
       </div>
     </footer>
