Added Location Format Alert & CORS

--- a/templates/register.html
+++ b/templates/register.html
@@ -97,7 +97,7 @@
     crossorigin="anonymous"></script>
 
     <script>
-      <!-- Add this script to automatically hide flash messages after 5 seconds -->
+      // Add this script to automatically hide flash messages after 5 seconds
 
       setTimeout(function () {
         document.querySelectorAll(".alert").forEach(function (alert) {
