--- a/templates/headers.html
+++ b/templates/headers.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Itinerary</title>
 
+    <!-- Preconnect to required origins -->
+    <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
+
     <!-- Share Button css -->
     <link
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('static', filename='share.css' ) }}"
     />
-    <script
-      src="https://kit.fontawesome.com/046a1f51ad.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <!-- This code block includes links to Bootstrap CSS and Bootstrap Icons CSS. -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
