--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,10 @@
       <form action="/" method="POST" class="form-inline">
         <div class="form-group">
           <label for="source">From:</label>
+          <!-- Inform - Format: City,State,Country -->
+          <div class="alert alert-info" role="alert">
+            Please enter the location in the format: City, State, Country.
+          </div>
           <input
             type="text"
             class="form-control"
@@ -125,6 +129,7 @@
       </div>
     </footer>
     <script
+      async
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
